<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_rounded_border_rectangle"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_login"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_email"
            style="@style/TextViewRegular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon"/>

    <EditText
            android:id="@+id/et_email"
            style="@style/EditTextRegular"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="26dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"/>

    <TextView
            android:id="@+id/tv_password"
            style="@style/TextViewRegular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:text="@string/title_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"/>

    <EditText
            android:id="@+id/et_password"
            style="@style/EditTextRegular"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="26dp"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"/>

    <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextViewRegular"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:text="@string/forgot_password_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>

    <TextView
            android:id="@+id/tv_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@drawable/drawable_rounded_border_rectangle_button"
            android:padding="11dp"
            android:text="@string/title_login"
            android:textAppearance="?android:textAppearanceMedium"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>

    <TextView
            android:id="@+id/tv_not_member_yet"
            style="@style/TextViewRegular"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/not_member_yet"
            app:layout_constraintEnd_toStartOf="@+id/tv_register_now"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

    <TextView
            android:id="@+id/tv_register_now"
            style="@style/TextViewRegular"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_not_member_yet"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

    <TextView
            android:id="@+id/tv_theme"
            style="@style/TextViewRegular"
            android:text="@string/change_theme_to"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sb_theme"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/sb_theme"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sb_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:checked="false"
            android:text="@string/off"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textColor="?txtColorDark"
            app:switchPadding="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_theme"/>
</androidx.constraintlayout.widget.ConstraintLayout>